--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "wordle"
 version = "0.1.0"
 edition = "2018"
+readme = "README.md"
+license = "MIT"
+author = "cursorsdottsx"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
